[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bincode = "1.3.3"
bitcoin = { version = "0.32.5", features = ["rand"] }
bitcoincore-rpc-json = { version = "0.19.0", default-features = false }

candid = {workspace = true}

hex = "0.4.3"

ic-cdk = {workspace = true}
ic-cdk-timers = {workspace = true} # Feel free to remove this dependency if you don't need timers
ic-canister-log = {workspace = true}

ic-stable-memory = "0.4.4"
ic-stable-structures = "0.6.2"

lazy_static = "1.4"

logs = { path = "../logs" }

serde ={ workspace = true, version = "1.0", features = ["derive"] }
serde_json = { workspace = true, version = "1.0", features = ["preserve_order"] }

sha2 = "0.10.8"