[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.90", features = ["backtrace"] }
# axum = { version = "0.8.1", features = ["http2"] }
bincode = "1.3.3"
bitcoin = { version = "0.32.5", features = ["rand"] }
bitcoincore-rpc-json = { version = "0.19.0", default-features = false }
brotli = "7.0.0"

candid = {workspace = true}
ciborium = "0.2.1"
clap = { version = "4.4.2", features = ["derive", "env"] }
chrono = { version = "0.4.19", default-features = false }

futures = { version = "0.3.17" }

hex = "0.4.3"

ic-cdk = {workspace = true}
ic-cdk-timers = {workspace = true} # Feel free to remove this dependency if you don't need timers
ic-canister-log = {workspace = true}
ic-canisters-http-types = { workspace = true }

ic-stable-memory = "0.4.4"
ic-stable-structures = "0.6.2"

indexer-interface = { path = "../interface" }

lazy_static = "1.4"

logs = { path = "../logs" }

mp4 = "0.14.0"

ordinals = "0.0.14"

pretty_assertions = "1.2.1"
regex = "1.6.0"
ref-cast = "1.0.23"

serde ={ workspace = true }
serde_json = { workspace = true }
serde_with = "3.7.0"

sha2 = "0.10.8"
sha3 = "0.10.8"
snafu = "0.8.3"

tempfile = "3.2.0"